fixed mobile view spacing in filters and modal pop up

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -7,6 +7,7 @@
   position: sticky;
   top: 70px;
   padding: 5px 15px 5px 15px;
+  margin-top: 50px;
 }
 
 .padding{
@@ -21,6 +22,7 @@
   display: flex;
   flex-direction: column;
   max-width: 100vw;
+  margin-top: 50px;
 }
 /*****User Cards*****/
 
@@ -95,15 +97,24 @@ div.card-img-overlay{
 .modalwrap {
   background: linear-gradient(90deg, rgba(163, 75, 112, 1), rgba(38, 193, 186, 1));
   padding: 3px;
+  
+}
+
+@media (max-width: 576px){
+  .modalwrap {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(7%, -50%);
+    
+  }
 }
 
 @media (min-width: 576px){
 
 /*****Homepage Filter*****/
   .spacing{
-    position: sticky;
-    top: 70px;
-    padding: 5px 0px 5px 50px;
+    margin-top: 0px;
   }
 
   .formatting{
